--- a/style.css
+++ b/style.css
@@ -1,3 +1,33 @@
+/*styling presets*/
+
+*{
+    padding: 0%;
+    margin: 0%;
+    box-sizing: border-box;
+}
+
+body{
+    position: relative;
+}
+
+nav {
+    background-color: aqua;
+    box-shadow: 0 7px 10px black;
+}
+
+.navbar{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 1.3rem 0;
+}
+.navbar .logo{
+    color: white;
+    text-decoration: none;
+    letter-spacing: 2px;
+    font-size: 2.2rem;
+    
+}
 
 
 
