--- a/style.css
+++ b/style.css
@@ -29,5 +29,24 @@ nav {
     
 }
 
+#search-input{
+    max-width: 400px;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    font-size: 18px;
+    color: black;
+}
+
+#search-button{
+    padding: 10px 20px;
+    background-color: blue;
+    color: white;
+    border: none;
+    font-size: 18px;
+    cursor: pointer;
+    border-radius: 5px;
+}
+
 
 
